Got rid of Jersey client into ZWave Network Driver
- Removed dependency on Jersey client
- Removed deprecated LogHelper
- Moved to standard OSGi logger